django-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-backend
  namespace: chatapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-backend
  template:
    metadata:
      labels:
        app: django-backend

    spec:
      containers:
        - name: django-backend
          image: 442042550385.dkr.ecr.us-east-1.amazonaws.com/django-chat-backend:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "250m"  # Request 250 millicores
              memory: "512Mi"  # Request 512 MiB
            limits:
              cpu: "500m"  # Maximum CPU limit
              memory: "1Gi"  # Maximum Memory limit

---
apiVersion: v1
kind: Service
metadata:
  name: backend-server
  namespace: chatapp
spec:
  selector:
    app: django-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
